log
Fri 24 Mar 2023 06:02:56 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:9: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |     if (list == NULL) {
      |         ^~~~
      |         List
list.c:33:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
af326ef
Fri 24 Mar 2023 06:03:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4930867
Fri 24 Mar 2023 06:04:08 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:10: error: ‘lista’ is a pointer; did you mean to use ‘->’?
   46 |     lista.current = lista.head;
      |          ^
      |          ->
list.c:46:26: error: ‘lista’ is a pointer; did you mean to use ‘->’?
   46 |     lista.current = lista.head;
      |                          ^
      |                          ->
Compilation failed
697eeb4
Fri 24 Mar 2023 06:04:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ab403bd
Fri 24 Mar 2023 06:07:36 PM UTC: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:3: error: ‘a’ undeclared (first use in this function)
   49 |   a
      |   ^
list.c:49:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:49:4: error: expected ‘;’ before ‘}’ token
   49 |   a
      |    ^
      |    ;
   50 | }
      | ~   
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
23da3e9
Fri 24 Mar 2023 06:07:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fd8c1b2
Fri 24 Mar 2023 06:07:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
46ecae4
Fri 24 Mar 2023 06:08:32 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
d395ce7
Fri 24 Mar 2023 06:09:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
19c4a96
Fri 24 Mar 2023 06:09:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
70544a9
Fri 24 Mar 2023 06:10:11 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
050de67
Fri 24 Mar 2023 06:15:02 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
260fc31
